new hogweed detector version released

--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -65,7 +65,7 @@
     "    print(\"Consider following the guide https://www.tensorflow.org/install/gpu for model training\")\n",
     "\n",
     "IMAGES = 7100\n",
-    "IMG_SIZE = (299, 299)\n",
+    "IMG_SIZE = (224, 224)\n",
     "CLASS_NAMES = ['hogweed', 'cetera', 'other']\n",
     "\n",
     "BATCH_SIZE = 8\n",
@@ -195,7 +195,7 @@
     "        graph.grid(visible=True)\n",
     "\n",
     "        self.figure.canvas.draw()\n",
-    "        self.display_object.update()\n",
+    "        self.display_object.update(self.figure)\n",
     "\n",
     "    def on_train_begin(self, logs=None):\n",
     "        self.display_object = display(self.figure, display_id=True)\n",
@@ -455,7 +455,7 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
+    "from tensorflow.keras.applications.mobilenet_v2 import preprocess_input, MobileNetV2\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -464,7 +464,7 @@
     "\n",
     "INPUT_SHAPE = IMG_SIZE + (3,)\n",
     "\n",
-    "base_model = Xception(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
+    "base_model = MobileNetV2(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
     "base_model.trainable = False\n",
     "\n",
     "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
