Open api fixed and proved

--- a/report/tables.tex
+++ b/report/tables.tex
@@ -94,7 +94,7 @@
 		\cline{2-5}
 		& Уменьшенное фото профиля & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Меняется на URL}{Создаётся} & - \\
 		\hline
-		\multirow{20}{*}{\rota{Отчёт}} & Номер отчёта & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Удаляется}{-} \\
+		\multirow{20}{*}{\rota{Отчёт}} & Номер отчёта & \inlinedSD{Удаляется}{Создаётся} & \inlinedSD{Неизменно}{Создаётся} & \inlinedSD{Удаляется}{-} \\
 		\cline{2-5}
 		& Номер пользователя & \inlinedSD{Меняется на адрес электронной почты}{Добавляется} & \inlinedSD{Неизменно}{Добавляется} & \inlinedSD{Меняется на адрес электронной почты}{-} \\
 		\cline{2-5}
