--- a/report/additions.tex
+++ b/report/additions.tex
@@ -190,4 +190,4 @@
 
 \addition{openapi}{OpenAPI спецификация API системы}
 
-\lstinputlisting[breaklines=true]{../HogWeedGo.openapi.yml}
+\lstinputlisting[breaklines=true, basicstyle=\small]{../HogWeedGo.openapi.yml}
