--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -19,7 +19,7 @@
 
 \tab
 В результате тестирования серверной части приложения было выявлено увеличение времени, требующегося на обработку запросов отчётов при большом количестве запросов, загруженных в систему.
-Несмотря на то, что на текущую реализацию клиентского приложения это оно влияния не оказывает, был предложен вариант решения данной проблемы, который будет возможно реализовать, используя последующие версии фреймворка \en{Django}.
+Несмотря на то, что на текущую реализацию клиентского приложения это оно влияния не оказывает, был предложен и реализован вариант решения данной проблемы.
 
 \tab
 В результате исследования последовательностей действий пользователей, необходимых для выполнения сценариев использования клиентского приложения, были выявлены и сокращены некоторые последовательности.
