--- a/report/tests.tex
+++ b/report/tests.tex
@@ -33,15 +33,17 @@
 
 \tab
 Результаты исследования показали, что с увеличением количества загруженных отчётов повышается время запроса их получения.
-Несмотря на то, что из-за того, что клиентская сторона системы выполняет загрузку данных асинхронно, а также производит кеширование запросов, влияния на производительность клиентской части системы увеличение времени ожидание ответа оказать не должно, оно может повлиять на других потенциальных пользователей API.
+Несмотря на то, что из-за того, что клиентская сторона системы выполняет загрузку данных асинхронно, а также производит кеширование запросов, влияния на производительность клиентской части системы увеличение времени ожидание ответа не оказывает, оно может повлиять на других потенциальных пользователей API.
 
 \tab
-В качестве решения проблемы предложено для ответа на этот запрос на серверной стороне приложения использовать технологию \en{HTTP Streaming}.
-Это позволит как снизить количество запросов (вместо повторных запросов пользователь API будет просто подписываться на получение новых), так и уменьшить единовременную нагрузку на сеть путём постепенной загрузки отчётов.
+В качестве решения проблемы предложено для ответа на этот запрос на серверной стороне приложения использовать технологию пагинация, разбив многочисленные отчёты на небольшие группы и предоставив пользователю возможность запрашивать каждую группу раздельно.
+Это позволит уменьшить единовременную нагрузку на сеть путём постепенной загрузки отчётов.
+В ответ сервера на запрос получения отчётов были добавлены поля, указывающие сколько всего отчётов хранится в системе, а также каким образом можно загрузить предыдущую и следующую группы.
+Установка размера запрашиваемой группы производится пользователем при помощи указания номера первого отчёта, который требуется получить, и их общего количества.
 
 \tab
-Для клиентской части приложения были подготовлены обработчики событий для подписки на поток отчётов и получение такого потока.
-На серверной же части приложения актуальная на данный момент версия фреймворка \en{Django} не поддерживает \en{HTTP Streaming} асинхронно, не блокируя при этом остальной траффик.
+На клиентской части приложения запрос на загрузку всех отчётов был изменён на запрос на загрузку первых 100 отчётов с дальнейшей догрузкой последующих в случае их наличия.
+Среднее время загрузки одной такой страницы с 100 отчётов составило 806 мс.
 
 \subsection{Исследование API серверной части ПО}
 
