report table 7 fixed

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -18,7 +18,7 @@
 В ходе выполнения данной выпускной квалификационной работы была создана система для наблюдения и учёта распространения потенциально опасных для человека видов растений.
 Был произведён анализ предметной области и проектирование сценариев использования, архитектуры, модели базы данных и графического пользовательского интерфейса.
 После чего была выполнена разработка системы с использованием таких технологий как Python, Django, Django Rest Framework, TensorFlow, Dart, Flutter, BLoC, а также Docker.
-В завершение было исследовано быстродействие системы, её API, точность классификации растений при обученной нейронной сетью, а также проанализированы последовательности действий пользователей, необходимые для работы с системой.
+В завершение было исследовано быстродействие системы, её API, точность классификации растений обученной нейронной сетью, а также проанализированы последовательности действий пользователей клиентской части системы, необходимые для работы с ней.
 
 \cleardoublepage
 \newcont{Abstract}
@@ -28,5 +28,5 @@
 	In course of this qualification work, a system for monitoring and recording the spread of potentially dangerous to humans plant species was created.
 	The analysis of the subject area and the design of use cases, architecture, database model and graphical user interface were carried out.
 	After that, the system was developed using technologies such as Python, Django, Django Rest Framework, TensorFlow, Dart, Flutter, BLoC, and Docker.
-	Finally, the operating time of the system, its API, the accuracy of plant classification with a trained neural network, and the sequences of user actions necessary to work with the system were analyzed.
+	Finally, the operating time of the system, its API, the accuracy of plant classification with a trained neural network, and the sequences of user actions necessary to work with the client part of the system were analyzed.
 \end{otherlanguage}
