--- a/report/project.tex
+++ b/report/project.tex
@@ -77,12 +77,11 @@
 	\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, leftmargin=*, labelindent=0.5cm]
 		\item На основной странице приложения нажимает на кнопку справа внизу с символом \textquote{+}.
 		\item Снизу экрана открывается форма отправки отчёта.
-		\item Пользователь заполняет поля описания находки и, по желанию, описания местоположения находки. При возможности поле описания местоположения находки заполняется автоматически (см. п. 3.5) текущим адресом пользователя.
-		\item Пользователь выбирает местоположение своей находки на карте ИЛИ нажимает на кнопку \textquote{Использовать моё местонахождение}.
-		\item Пользователь заполняет даты и времени обнаружения растения при помощи специальных виджетов выбора даты и времени.
+		\item Пользователь заполняет поле описания находки и, по желанию, описания местоположения находки.
+		\item Пользователь выбирает местоположение своей находки на карте.
+		\item Пользователь заполняет поле даты и времени обнаружения растения.
 		\item По желанию пользователь загружает фотографии находки. Фотографии проверяются системой автоматической проверки изображений и пользователь ознакамливается с результатами проверки справа от поля для загрузки фотографий.
 		\item По желанию пользователь нажимает на фотографии, прикреплённые к отчёту и просматривает их увеличенную версию.
-		\item По желанию пользователь оставляет общий комментарий к своей находке.
 		\item Пользователь нажимает кнопку \textquote{\en{Send}}.
 		\item Форма отправки отчёта закрывается.
 		\item В нижнем правом углу появляется сообщение о статусе отправки и, в случае успеха, на карту добавляется новая метка в указанном месте.
@@ -106,8 +105,8 @@
 		\item На основной странице приложения пользователь открывает меню навигации и выбирает пункт \textquote{\en{Account}}.
 		\item По желанию пользователь выбирает новую фотографию профиля.
 		\item По желанию пользователь вводит новое имя и нажимает \textquote{\en{Send}}.
-		\item По желанию пользователь нажимает на кнопку \textquote{Адрес электронной почты} и вводит новый адрес электронной почты и код её подтверждения в открывшемся диалоговом окне.
-		\item По желанию пользователь нажимает на кнопку \textquote{Изменить пароль} и вводит новый пароль и его подтверждение в открывшемся диалоговом окне.
+		\item По желанию пользователь нажимает на кнопку \textquote{Адрес электронной почты}, вводит новый адрес электронной почты, нажимает на кнопку \en{Prove} и вводит код её подтверждения в открывшемся диалоговом окне, после чего нажимает на кнопку \en{Submit}.
+		\item По желанию пользователь нажимает на кнопку \textquote{Изменить пароль} и вводит новый пароль и его подтверждение в открывшемся диалоговом окне, после чего нажимает на кнопку \en{Submit}.
 		\item По желанию пользователь нажимает на кнопку \textquote{Выйти} ИЛИ \textquote{Удалить аккаунт}.
 		\item В нижнем правом углу появляется сообщение о статусе обновления профиля.
 		\item В случае выхода из системы открывается главная страница приложения.
