--- a/report/support.tex
+++ b/report/support.tex
@@ -95,11 +95,11 @@
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
 
 \newcommand{\longcaption}[1]{
-	\caption{#1}
+	\caption{\centering#1}
 	\addtocounter{table}{-1}
 	\\\hline
 	\endfirsthead
-	\caption*{Продолжение таблицы \arabic{table}}
+	\caption*{\centeringПродолжение таблицы \arabic{table}}
 	\\\hline
 	\endhead
 	\hline
