--- a/report/tests.tex
+++ b/report/tests.tex
@@ -105,7 +105,7 @@
 \tab
 Настройка проведения этого тестирования в системе непрерывной интеграции и развёртывания дала возможность отслеживать точность классификации изображений системой автоматической проверки изображений в случае необходимости обучения новой модели.
 
-\subsection{Анализ последовательностей действий пользователей системы}
+\subsection{Анализ последовательностей действий пользователей клиентской части системы}
 
 \tab
 Последовательности действий пользователей системы были проанализированы при помощи web интерфейса клиентской части системы и её сервисного сайта.
@@ -117,8 +117,8 @@
 В результате анализа была оптимизирована форма отправки пользователем отчёта:
 \begin{itemize}
 	\item Добавлено автоматическое заполнение поля \textquote{\en{Address}} при помощи данных, полученных из сервиса \la{Nominatim}.
-	\item Добавлена кнопка автоматической установки маркера в текущую позицию пользователя.
-	\item Поле для ввода даты и времени наблюдения растения заменено на виджеты.
+	\item Добавлена кнопка автоматической установки маркера в текущую позицию пользователя, а также начальная позиция маркера перемещена в текущую позицию пользователя.
+	\item Поле для ввода даты и времени наблюдения растения заменено на виджеты, на которых по умолчанию установлено текущее время.
 \end{itemize}
 Также была оптимизирована форма изменения данных профиля пользователя:
 \begin{itemize}
@@ -127,3 +127,4 @@
 
 \tab
 В результате анализа последовательности действий пользователей системы были сокращены по возможности.
+Для сценария \textquote{Отправка отчёта о наблюдении потенциально опасного растения} количество обязательных действий было сокращено до 1, а для сценария \textquote{Редактирование профиля} максимальное количество действий - до 13.
