report moved to release

--- a/report/description.tex
+++ b/report/description.tex
@@ -24,7 +24,7 @@
 \tabletwo
 
 \tab
-Также для каждого отношения в базе данных был создан класс-админ, наследник класса \code{Model} фреймворка \en{Django}.
+Также для каждого отношения в базе данных был создан класс-админ, наследник класса \code{ModelAdmin} фреймворка \en{Django}.
 Эти классы управляют представлением данных из БД на сервисном сайте системы, описывают порядок и вид отображения полей, а также значения каких полей могут быть изменены администраторами системы.
 
 \tab
