MobileNetV2 in report

--- a/report/description.tex
+++ b/report/description.tex
@@ -125,7 +125,7 @@ HTTP запросы пользователей обрабатываются пр
 Для реализации нейронной сети был выбран фреймворк \en{TensorFlow}\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
 
 \tab
-В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{XCeption}\cite{xception-better}, обученная на наборе данных \en{Image\-Net}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
+В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{MobileNetV2}\cite{xception-better}, обученная на наборе данных \en{Image\-Net}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
 
 \tab
 Система автоматической проверки изображений -- желательный, но не обязательный компонент системы.
@@ -144,7 +144,7 @@ HTTP запросы пользователей обрабатываются пр
 
 \tab
 Изображения были разделены на набор для обучения и набор для валидации, после чего оба набора были подвергнуты аугментации при помощи случайного горизонтального поворота изображений и случайного угла наклона не более чем на 18 градусов.
-Для соответствия критериям ввода модели \en{XCeption} изображения были уменьшены до размера 299 на 299 пикселей.
+Для соответствия критериям ввода модели \en{MobileNetV2} изображения были уменьшены до размера 224 на 224 пикселей.
 
 \tab
 Модель была дополнена новыми слоями и скомпилирована.
