MobileNetV2 in report

--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -32,7 +32,7 @@
 	\weblink*{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
 	\bibitem{convolutional-better} Shamsaldin, Ahmed \& Fattah, Polla \& Rashid, Tarik \& Al-Salihi, Nawzad. (2019). The Study of The Convolutional Neural Networks Applications. UKH Journal of Science and Engineering. 3. 31-40. 10.25079/ukhjse.v3n2y2019.pp31-40.
 	\bibitem{tensorflow-better} Kiran, T. Tritva Jyothi, Computer Vision Accuracy Analysis with Deep Learning Model Using TensorFlow (JULY 22, 2020). International Journal of Innovative Research in Computer Science \& Technology (IJIRCST) ISSN: 2347-5552, Volume, 8, Issue, 4, July, 2020, Available at SSRN: \href{https://ssrn.com/abstract=3673214}{https://ssrn.com/abstract=3673214} or \href{http://dx.doi.org/10.2139/ssrn.3673214}{http://dx.doi.org/10.2139/ssrn.3673214} 
-	\weblink*{xception-better}{https://arxiv.org/abs/1610.02357}{Описание модели XCeption свёрточной нейронной сети, обученной на наборе данных ImageNet}{18.05.2022}
+	\weblink*{mobilenet-better}{https://arxiv.org/abs/1801.04381}{Описание модели MobileNetV2 свёрточной нейронной сети, обученной на наборе данных ImageNet}{29.05.2022}
 	
 	
 	
