--- a/report/description.tex
+++ b/report/description.tex
@@ -125,7 +125,7 @@ HTTP запросы пользователей обрабатываются пр
 Для реализации нейронной сети был выбран фреймворк \en{TensorFlow}\cite{tensorflow-better}, так как он распространяется под открытой лицензией, а также позволяет достичь достаточно высоких показателей точности классификации изображений.
 
 \tab
-В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{MobileNetV2}\cite{xception-better}, обученная на наборе данных \en{Image\-Net}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
+В качестве модели для применения технологии \en{transfer learning} была выбрана модель \en{MobileNetV2}\cite{mobilenet-better}, обученная на наборе данных \en{Image\-Net}, так как с её помощью можно достичь необходимой точности классификации, при этом не превысив требуемое ограничение по размеру.
 
 \tab
 Система автоматической проверки изображений -- желательный, но не обязательный компонент системы.
