--- a/report/report.tex
+++ b/report/report.tex
@@ -33,6 +33,12 @@
 
 % \usepackage{showkeys}
 \usepackage[unicode, colorlinks=true, linkcolor=, urlcolor=blue, citecolor=]{hyperref}
+\hypersetup {
+	pdfauthor={Сергеев А. Д.},
+	pdftitle={Разработка программной системы наблюдения за распространением потенциально опасных для человека видов растений},
+	pdfsubject={Удобство и скорость отправки и получения данных},
+	pdfkeywords={Опасные для человека растения, Мобильное приложение, Django, DRF, PostGIS, Flutter, BLoC, TensorFlow, Docker}
+}
 
 \input{support}
 
