--- a/report/title.tex
+++ b/report/title.tex
@@ -21,10 +21,10 @@
 
 	\vspace*{3cm}
 	
-	\titlelongtext{\fontsize{18}{21.6}{\textbf{
-		ВЫПУСКНАЯ КВАЛИФИКАЦИОННАЯ РАБОТА \\
-		БАКАЛАВРА
-	}}}
+	\titlelongtext{\fontsize{18}{21.6}{\textbf{\MakeUppercase{
+		Выпускная Квалификационная Работа \\
+		Бакалавра
+	}}}}
 	
 
 	\vspace*{1cm}
