report images fixed

--- a/report/methods.tex
+++ b/report/methods.tex
@@ -26,5 +26,5 @@
 
 \tab
 Для осуществления модерации и работы с данными требуется создание сервисного web интерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
-Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате \textquote{CSV}.
-Также желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему.
+Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате .CSV.
+Желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему.
